@@ -27,6 +27,8 @@ Block EXTPAR               # scale of SUSY breaking BCs
      0    2.61689129e+16   # MX scale
 # SOFTSUSY-specific non SLHA information:
 # MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=8.21925703e-05
+# 3-loop RGE corrections are off. 2-loop Yukawa/g3 thresholds are off
+# 2-loop SUSY QCD computation of squark/gluino pole masses are off
 # Z3 = 1, SoftHiggsOut = 0
 Block MASS                      # Mass spectrum
 # PDG code     mass             particle
