@@ -27,6 +27,8 @@ Block EXTPAR               # scale of SUSY breaking BCs
      0    2.62367486e+16   # MX scale
 # SOFTSUSY-specific non SLHA information:
 # MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=8.72479732e-05
+# 3-loop RGE corrections are off. 2-loop Yukawa/g3 thresholds are off
+# 2-loop SUSY QCD computation of squark/gluino pole masses are off
 # Z3 = 0, SoftHiggsOut = 0
 Block MASS                      # Mass spectrum
 # PDG code     mass             particle
