@@ -35,6 +35,8 @@ Block EXTPAR               # scale of SUSY breaking BCs
      0    1.79224973e+16   # MX scale
 # SOFTSUSY-specific non SLHA information:
 # MIXING=2 Desired accuracy=1.00000000e-03 Achieved accuracy=5.57679456e-04
+# 3-loop RGE corrections are off. 2-loop Yukawa/g3 thresholds are off
+# 2-loop SUSY QCD computation of squark/gluino pole masses are off
 Block MASS                      # Mass spectrum
 # PDG code     mass             particle
         24     8.03547388e+01   # MW
