@@ -1,0 +1,24 @@
+/** 
+   Project:     SOFTSUSY 
+   File:        higher.h
+   Author:      B.C. Allanach, S. Martin, D. Robertson and R. Ruiz de Austri
+   Manual:      B.C. Allanach, S. Martin, D. Robertson and R. Ruiz de Austri, 
+                arXiv:1601.06657
+   Webpage:     http://allanach.home.cern.ch/allanach/softsusy.html
+   Description: main calling program to be put in src/ in the softsusy
+                directory, for 2-loop SUSY QCD corrections to gluino and
+                squark pole masses.
+*/
+
+#include <iostream>
+#include "mycomplex.h"
+#include "def.h"
+#include "linalg.h"
+#include "lowe.h"
+#include "rge.h"
+#include "softsusy.h"
+#include "softpars.h"
+#include "susy.h"
+#include "utils.h"
+#include "numerics.h"
+using namespace softsusy;
