@@ -1,2 +1,3 @@
+<li> 8/02/16 higher.x now compiles when all higher order corrections have been compiled
 <li> 4/02/16 Bug-fix identifying NLSP when gravitinos are light: Thanks to T Cridge
 <li> 1/02/16 Small bug fix in piWWT: chargino W contribution
